--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "naurio-frontend",
   "version": "1.0.0",
@@ -9,8 +10,12 @@
     "react-scripts": "5.0.1"
   },
   "scripts": {
-    "start": "react-scripts start"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+  "test": "react-scripts test",
+  "eject": "react-scripts eject"
   },
+  
   "browserslist": {
     "production": [
       ">0.2%",
